# envionment_monitor_rust

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  notes.md  partition_table.csv  run_tests_hw.sh  run_tests_qemu.sh  test_wrapper.py
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: rust_ci.yml
bme68x/: Cargo.toml  README.md  build.rs
bme68x/src/: lib.rs
environment-monitor/: Cargo.toml  README.md  build.rs  partition_table.csv
environment-monitor/src/: bme68x.rs  dummy_private_data.rs  errors.rs  interconnect.rs  lib.rs  main.rs
environment-monitor/src/bsec/: mod.rs
src/: bme68x_bindings.h  bme68x_bindings.rs  bme68x_pure.rs  component_bindings.h  dummy_private_data.rs  interconnect.rs  lib.rs  main.rs  mqtt.rs  veml7700.rs
src/bsec/: bsec_bindings.rs  mod.rs  placeholder.md
unused/: build.rs
veml7700/: Cargo.toml  README.md
veml7700/src/: lib.rs
