[workspace]
members = ["environment-monitor"]
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[[workspace.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "joltwallet/littlefs", version = "1.12.1" }
bindings_header = "envionment-monitor/src/component_bindings.h"
