[package]
name = "environment-monitor-rust"
version = "0.1.0"
authors = ["Gabriel Roper <9311953+Marsfan@users.noreply.github.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"
description = "Tool for monitoring the enivironment and publishing the data via MQTT"
license = "MPL-2.0"
keywords = ["esp32", "environment", "mqtt", "monitor"]
repository = "https://github.com/marsfan/envionment_monitor_rust"
categories = ["embedded"]


[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "joltwallet/littlefs", version = "1.12.1" }
bindings_header = "src/component_bindings.h"

[dependencies]
veml7700 = { path = "../veml7700" }
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.*" }
esp-idf-hal = "0.*"
thiserror = "1.0.56"
esp-idf-sys = "0.*"
embedded-hal = "1.0.0"
embedded-hal-bus = { version = "0.1.0", features = ["std"] }

[build-dependencies]
bindgen = "0.69.2"
embuild = "0.31.3"


[lints.rust]
missing_docs = "warn"
deprecated-in-future = "warn"

[lints.clippy]
all = "warn"
correctness = "warn"
suspicious = "warn"
complexity = "warn"
perf = "warn"
pedantic = "warn"
cargo = "warn"

# Individual rules instead of groups
missing_docs_in_private_items = "warn"
cargo_common_metadata = "warn"
unwrap_in_result = "warn"
match_bool = "warn"
uninlined_format_args = "warn"
needless_pass_by_value = "warn"
explicit_iter_loop = "warn"
if_not_else = "allow"
unreadable_literal = "allow"
inline_always = "allow"
