[package]
name = "veml7700"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
embuild = "0.31.4"

[dependencies]
embedded-hal = "1.0.0"
esp-idf-hal = "0.43.0"
thiserror = "1.0.57"


[dev-dependencies]
esp-idf-sys = "0.*"
